src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Default_Owner_by_Country_Setting__c</fullName>
        <description>Technical: Indicates the type of owner as set by the automation logic: queue or user (individual)</description>
        <inlineHelpText>Indicates the type of owner as set by the automation logic: queue or user (individual)</inlineHelpText>
        <label>Default Owner by Country Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefectCodes__c</fullName>
        <description>Indicates the Standardized codes for categorising a Defect on the Physical Asset</description>
        <inlineHelpText>Indicates the Standardized codes for categorising a Defect on the Physical Asset</inlineHelpText>
        <label>Defect Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T01</fullName>
                    <label>T01 – Worn Out</label>
                </value>
                <value>
                    <fullName>T02</fullName>
                    <label>T02 – Lime Scale</label>
                </value>
                <value>
                    <fullName>T03</fullName>
                    <label>T03 – Blocked</label>
                </value>
                <value>
                    <fullName>T04</fullName>
                    <label>T04 – Cut / Broken</label>
                </value>
                <value>
                    <fullName>T05</fullName>
                    <label>T05 – Kinked / Bent / Squeezed</label>
                </value>
                <value>
                    <fullName>T06</fullName>
                    <label>T06 – Corroded</label>
                </value>
                <value>
                    <fullName>T07</fullName>
                    <label>T07 – Sealing</label>
                </value>
                <value>
                    <fullName>T08</fullName>
                    <label>T08 – Wrong Mounting</label>
                </value>
                <value>
                    <fullName>T09</fullName>
                    <label>T09 – Wrong Treatment</label>
                </value>
                <value>
                    <fullName>T10</fullName>
                    <label>T10 – Vandalism / Theft</label>
                </value>
                <value>
                    <fullName>T11</fullName>
                    <label>T11 – Wrong Adjustment</label>
                </value>
                <value>
                    <fullName>T12</fullName>
                    <label>T12 – Electrical</label>
                </value>
                <value>
                    <fullName>T13</fullName>
                    <label>T13 – Bug / Old version sw</label>
                </value>
                <value>
                    <fullName>T14</fullName>
                    <label>T14 – Water / Mains Supply</label>
                </value>
                <value>
                    <fullName>T15</fullName>
                    <label>T15 – Connection / Network</label>
                </value>
                <value>
                    <fullName>T16</fullName>
                    <label>T16 – Quality Ingredients</label>
                </value>
                <value>
                    <fullName>T17</fullName>
                    <label>T17 – Customer Request</label>
                </value>
                <value>
                    <fullName>T18</fullName>
                    <label>T18 – Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EarliestAppointmentTime__c</fullName>
        <description>Indicates the start date/time the service can be executed in collaboration with the customer or determined by planning.</description>
        <label>Earliest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarlyStartDate__c</fullName>
        <description>Indicates the earliest date/time the service can be executed if the case needs to be managed within the SLA.</description>
        <label>Early Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Date_Time__c</fullName>
        <description>Technical: Indicates the time the entitlement start counting for the Milestones timer</description>
        <formula>IF(ISPICKVAL(Origin,&apos;E-mail&apos;), CaseQualificationDate__c, CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical: Indicates the time the entitlement start counting for the Milestones timer</inlineHelpText>
        <label>Entitlement Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Code_Display_Message__c</fullName>
        <label>Error Code / Display Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationReason__c</fullName>
        <description>Indicates the reason why  the case is brought under high attention</description>
        <inlineHelpText>Indicates the reason why  the case is brought under high attention</inlineHelpText>
        <label>Escalation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Solution__c</fullName>
        <description>Shows the solution as communicated to the customer</description>
        <inlineHelpText>Indicates the reason why  the case is brought under high attention</inlineHelpText>
        <label>External Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FaultConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates what is broken and is not the machine itself.</description>
        <inlineHelpText>Indicates what is broken and is not the machine itself.</inlineHelpText>
        <label>Fault Configuration_old</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Apttus_Config2__AssetLineItem__c.Apttus_Config2__OptionId__r.Family</field>
                <operation>equals</operation>
                <value>Spare Parts</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__AssetLineItem__c.Apttus_Config2__IsPrimaryLine__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Cases (Fault Configuration)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultLocationCategory__c</fullName>
        <label>Fault Location Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Door / Housing</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Electronics</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Water</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Brewing</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Ingredient / Dosing</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Payment / Telemetry</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Non Machine</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <description>Indicates what has been worked on for this Case</description>
        <inlineHelpText>Indicates what has been worked on for this Case</inlineHelpText>
        <label>Fault Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FaultLocationCategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D01</fullName>
                    <label>D01 - Housing</label>
                </value>
                <value>
                    <fullName>D02</fullName>
                    <label>D02 - Door</label>
                </value>
                <value>
                    <fullName>D03</fullName>
                    <label>D03 - Door Hinge</label>
                </value>
                <value>
                    <fullName>D04</fullName>
                    <label>D04 - Door Lock</label>
                </value>
                <value>
                    <fullName>D05</fullName>
                    <label>D05 - Door Switch / Sensor</label>
                </value>
                <value>
                    <fullName>D06</fullName>
                    <label>D06 - Cooling Compartment</label>
                </value>
                <value>
                    <fullName>D07</fullName>
                    <label>D07 - Drip Tray / Drip Plate</label>
                </value>
                <value>
                    <fullName>D08</fullName>
                    <label>D08 - Wastebucket</label>
                </value>
                <value>
                    <fullName>D09</fullName>
                    <label>D09 - Selection Buttons</label>
                </value>
                <value>
                    <fullName>D10</fullName>
                    <label>D10 - Cup Sensor</label>
                </value>
                <value>
                    <fullName>D11</fullName>
                    <label>D11 - Cup Dispensing</label>
                </value>
                <value>
                    <fullName>D12</fullName>
                    <label>D12 - Cup Magazine</label>
                </value>
                <value>
                    <fullName>D13</fullName>
                    <label>D13 - Branch Pipe</label>
                </value>
                <value>
                    <fullName>D14</fullName>
                    <label>D14 - Drum</label>
                </value>
                <value>
                    <fullName>D15</fullName>
                    <label>D15 - Motor (Drum)</label>
                </value>
                <value>
                    <fullName>D16</fullName>
                    <label>D16 - Helix</label>
                </value>
                <value>
                    <fullName>D17</fullName>
                    <label>D17 - Motor (Helix)</label>
                </value>
                <value>
                    <fullName>D18</fullName>
                    <label>D18 - Shafts</label>
                </value>
                <value>
                    <fullName>D19</fullName>
                    <label>D19 - Stirrer Dispenser</label>
                </value>
                <value>
                    <fullName>D20</fullName>
                    <label>D20 - Cup Heater</label>
                </value>
                <value>
                    <fullName>D21</fullName>
                    <label>D21 - Basestand / Cabinet</label>
                </value>
                <value>
                    <fullName>D22</fullName>
                    <label>D22 - Cup Dispenser Basestand</label>
                </value>
                <value>
                    <fullName>D23</fullName>
                    <label>D23 - Cooling Filter</label>
                </value>
                <value>
                    <fullName>D24</fullName>
                    <label>D24 - Condensor / Evaporator</label>
                </value>
                <value>
                    <fullName>E01</fullName>
                    <label>E01 - Fuse / Fuseholder</label>
                </value>
                <value>
                    <fullName>E02</fullName>
                    <label>E02 - Mains / Transformer</label>
                </value>
                <value>
                    <fullName>E03</fullName>
                    <label>E03 - Main Switch</label>
                </value>
                <value>
                    <fullName>E04</fullName>
                    <label>E04 - Power Supply PCB</label>
                </value>
                <value>
                    <fullName>E05</fullName>
                    <label>E05 - Fan Electronics</label>
                </value>
                <value>
                    <fullName>E06</fullName>
                    <label>E06 - Fan Cooling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fault_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates what is broken and is not the machine itself.</description>
        <inlineHelpText>Indicates what is broken and is not the machine itself.</inlineHelpText>
        <label>Machine Option</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Cases (Fault Configuration)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstEntitlementTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical  used by code to trigger setting and adjusting entitlements</description>
        <inlineHelpText>Technical  used by code to trigger setting and adjusting entitlements</inlineHelpText>
        <label>First Entitlement Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstRoutesalesVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate that this cases is the first routesales visit.</description>
        <inlineHelpText>This field indicate that this cases is the first routesales visit.</inlineHelpText>
        <label>First Routesales Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenerateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows to generate an order from this Case as all conditions are met</description>
        <inlineHelpText>Allows to generate an order from this Case as all conditions are met</inlineHelpText>
        <label>Generate Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fault_Configuration__c</fullName>
        <description>Indicates if the fault configuration field is empty or not. This is used to check for the visibility of Specify Fault Configuration flow component in the Case (Field Service) lightning page.</description>
        <formula>NOT(ISBLANK(Fault_Configuration__r.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the fault configuration field is empty or not. This is used to check for the visibility of Specify Fault Configuration flow component in the Case (Field Service) lightning page.</inlineHelpText>
        <label>Has Fault Configuration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Own_an_Open_CaseTask__c</fullName>
        <description>Checks if the ID of the current users  exists as Open Task -Owner ( used in Listview filtering only</description>
        <formula>CONTAINS(TS_OpenTaskOwnerIds__c, $User.Id)&amp;&amp;
NOT(ISBLANK(TS_OpenTaskOwnerIds__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Own tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IgnoreCalendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InViolation__c</fullName>
        <description>This field is used for reporting in order to check if a case is in violation.</description>
        <formula>IF( 
OR( 
ISPICKVAL( Status , &quot;New&quot;), 
ISPICKVAL( Status , &quot;Open&quot;), 
ISPICKVAL( Status , &quot;In progress&quot;) 
) &amp;&amp; 
NOW() &gt; SLADate__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalSolution__c</fullName>
        <description>Solution as indicated but only for internal use</description>
        <inlineHelpText>Not to be communicated to Customer</inlineHelpText>
        <label>Internal Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsFirstResponseClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for case milestones when first response is mark as completed</description>
        <inlineHelpText>Indicator for case milestones when first response is mark as completed</inlineHelpText>
        <label>First Response Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order is a project.</description>
        <inlineHelpText>Indicates whether the order is a project.</inlineHelpText>
        <label>Is Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used to delete a set of field upon cloning.</description>
        <inlineHelpText>This field is being used to delete a set of field upon cloning.</inlineHelpText>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSPRequiredForMovement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the movement requires the involvement of a LSP.</description>
        <inlineHelpText>Indicates whether the movement requires the involvement of a LSP.</inlineHelpText>
        <label>LSP Required for Movement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSPScheduleDateInDefaultTimeZone__c</fullName>
        <label>LSP Schedule Date in Default Time-Zone</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LSPScheduleDate__c</fullName>
        <label>LSP Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAppointmentDate__c</fullName>
        <description>Indicates the end date/time the service can be executed in collaboration with the customer or determined by planning.</description>
        <inlineHelpText>Indicates the end date/time the service can be executed in collaboration with the customer or determined by planning.</inlineHelpText>
        <label>Latest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LinkedToOrder__c</fullName>
        <description>Technical:  indicates that the case is linked to a SalesOrder</description>
        <formula>IF(ISBLANK( ApptusOrder__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical:  indicates that the case is linked to a SalesOrder</inlineHelpText>
        <label>Linked To Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoadID__c</fullName>
        <description>This field indicates the unique ID of the line item. This will need to be pre-fixed field with CASE-{18 digit ID of Work Order Trigger ID off the Installation Header record)</description>
        <externalId>true</externalId>
        <inlineHelpText>This field indicates the unique ID of the line item. This will need to be pre-fixed field with CASE-{18 digit ID of Work Order Trigger ID off the Installation Header record)</inlineHelpText>
        <label>Load ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Reading_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the meter reading record that needs evaluation /correction of the last counter values.</description>
        <label>Meter Reading Data</label>
        <referenceTo>APTS_Meter_Reading_Data__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MilestoneIsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger another CaseMilestone upon a change.</description>
        <inlineHelpText>This field is used to trigger another CaseMilestone upon a change.</inlineHelpText>
        <label>MilestoneIsChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Field: input to provide warnings for missed/almost missed milestones</description>
        <inlineHelpText>Technical Field: input to provide warnings for missed/almost missed milestones</inlineHelpText>
        <label>Milestone Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoATANotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send ATA notification to the customer (this will override the settings in Contact object).</description>
        <label>No ATA Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCaseClosureNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send case closure notification to the customer (this will override the settings in Contact object).</description>
        <label>No Case Closure Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCaseCreationNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send case creation notification to the customer (this will override the settings in Contact object).</description>
        <label>No Case Creation Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCaseDelayNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send case delay notification to the customer (this will override the settings in Contact object).</description>
        <label>No Case Delay Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoETANotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send ETA notification to the customer (this will override the settings in Contact object).</description>
        <label>No ETA Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoReplyEmailAddress__c</fullName>
        <formula>CASE(SalesOrganization__c, 
						&apos;SAP_0333&apos;, $Setup.TS_NoReplyAddress__c.Belgium__c,
						&apos;SAP_0975&apos;, $Setup.TS_NoReplyAddress__c.Denmark__c,
						&apos;SAP_6706&apos;, $Setup.TS_NoReplyAddress__c.France__c,
						&apos;SAP_6864&apos;, $Setup.TS_NoReplyAddress__c.Norway__c,
						&apos;SAP_0976&apos;, $Setup.TS_NoReplyAddress__c.Sweden__c, 
						&apos;SAP_0111&apos;, $Setup.TS_NoReplyAddress__c.Netherlands__c,
						&apos;SAP_0080&apos;, $Setup.TS_NoReplyAddress__c.Spain__c,
						&apos;SAP_6709&apos;, $Setup.TS_NoReplyAddress__c.Ireland__c,
						&apos;SAP_6712&apos;, $Setup.TS_NoReplyAddress__c.Germany__c,
						&apos;SAP_6750&apos;, $Setup.TS_NoReplyAddress__c.Great_Britain__c,
						&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Reply Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoStakeholderNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, do not send case closure notification to addtional stakeholders (this will override the settings in Account Location object).</description>
        <label>No Stakeholder Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_WOLI_Tasks__c</fullName>
        <label>Number of Completed WOLI Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Milestones__c</fullName>
        <description>Calculated based on the Origin and  Type of Case</description>
        <formula>IF(AND(ISPICKVAL(Origin, &quot;Telefoon&quot;) ,NOT(ISPICKVAL(Type,&quot;Field Service&quot;))), 2, IF(AND(ISPICKVAL(Origin, &quot;E-mail&quot;) ,NOT(ISPICKVAL(Type,&quot;Field Service&quot;))), 2,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Tasks__c</fullName>
        <defaultValue>1</defaultValue>
        <description>TS: Indicates the number of open tasks related to a case.</description>
        <label>Number of Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_WOLI_Tasks__c</fullName>
        <label>Number of Open WOLI Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofCompletedMilestones__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Completed Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutsideSLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <description>This field indicates whether the case is overdue whilest not being closed or cancelled.</description>
        <formula>IF(
OR(
ISPICKVAL( Status , &quot;New&quot;),
ISPICKVAL( Status , &quot;Open&quot;),
ISPICKVAL( Status , &quot;In progress&quot;)
) &amp;&amp;
NOW() &gt;  SLADate__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>This indicates the PO number for machine services.</description>
        <inlineHelpText>This indicates the PO number for machine services.</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the machine for which the case is logged.</description>
        <inlineHelpText>Please indicate the machine for which you want to log a case.</inlineHelpText>
        <label>Physical Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PhysicalAsset__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Machine</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickingDate__c</fullName>
        <description>Ultimate time the job has to be scheduled on.</description>
        <inlineHelpText>Ultimate time the job has to be scheduled on.</inlineHelpText>
        <label>Picking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDeliveryDate__c</fullName>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedMovementDate__c</fullName>
        <label>Planned Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedPickUpDate__c</fullName>
        <label>Planned Pick-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PotentialRoundTrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Round-Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <description>Indicates the project number.</description>
        <label>Project Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Duration__c</fullName>
        <inlineHelpText>in minutes.</inlineHelpText>
        <label>Qualification Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <label>Quantity Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer (Pack)</fullName>
                </value>
                <value>
                    <fullName>Trade Unit (Case)</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>